# pksip

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
crates/sip/: Cargo.toml
crates/sip-transport/: Cargo.toml
crates/sip-transport/src/: transport.rs
crates/sip-transport/src/transport/: manager.rs  udp.rs
crates/sip/benches/: parse.rs
crates/sip/src/: auth.rs  bytes.rs  common.rs  endpoint.rs  headers.rs  internal.rs  lib.rs  macros.rs  message.rs  msg.rs  params.rs  parser.rs  resolver.rs  scanner.rs  serializer.rs  server.rs  service.rs  token.rs  transaction.rs  transport.rs  uri.rs  util.rs
crates/sip/src/auth/: challenge.rs  credential.rs  mod.rs
crates/sip/src/endpoint/: mod.rs  service.rs
crates/sip/src/headers/: accept.rs  accept_encoding.rs  accept_language.rs  alert_info.rs  allow.rs  authentication_info.rs  authorization.rs  call_id.rs  call_info.rs  contact.rs  content_disposition.rs  content_encoding.rs  content_language.rs  content_length.rs  content_type.rs  cseq.rs  date.rs  error_info.rs  expires.rs  from.rs  in_reply_to.rs  max_fowards.rs  mime_version.rs  min_expires.rs  mod.rs  organization.rs  priority.rs  proxy_authenticate.rs  proxy_authorization.rs  proxy_require.rs  record_route.rs  reply_to.rs  require.rs  retry_after.rs  route.rs  server.rs  subject.rs  supported.rs  timestamp.rs  to.rs  (+5 more)
crates/sip/src/message/: auth.rs  headers.rs  request.rs  response.rs
crates/sip/src/message/auth/: challenge.rs  credential.rs  digest.rs
crates/sip/src/message/headers/: accept.rs  accept_encoding.rs  accept_language.rs  alert_info.rs  allow.rs  authentication_info.rs  authorization.rs  call_id.rs  call_info.rs  contact.rs  content_disposition.rs  content_encoding.rs  content_language.rs  content_length.rs  content_type.rs  cseq.rs  date.rs  error_info.rs  expires.rs  from.rs  in_reply_to.rs  max_fowards.rs  mime_version.rs  min_expires.rs  organization.rs  priority.rs  proxy_authenticate.rs  proxy_authorization.rs  proxy_require.rs  record_route.rs  reply_to.rs  require.rs  route.rs  (+11 more)
crates/sip/src/msg/: request.rs  response.rs
crates/sip/src/parser/: error.rs  mod.rs
crates/sip/src/transaction/: client_non_inv.rs  invite_server.rs  mod.rs  non_invite_server.rs  server.rs  server_inv.rs  server_non_inv.rs  tsx_key.rs
crates/sip/src/transport/: manager.rs  mod.rs  resolver.rs  udp.rs
crates/sip/src/uri/: host.rs  mod.rs  params.rs  scheme.rs  user.rs
crates/sip/tests/: message.rs  msg.rs  request.rs
examples/: Cargo.toml  dialog.rs  parse.rs  simple_dialog.rs  sipstateless.rs  stateless_uas.rs  uas.rs  uas_options.rs
pksip/: Cargo.toml
pksip/benches/: parse.rs
pksip/src/: core.rs  dialog.rs  endpoint.rs  error.rs  header.rs  headers.rs  lib.rs  macros.rs  message.rs  parser.rs  service.rs  test_utils.rs  transaction.rs  transport.rs
pksip/src/core/: endpoint.rs  service.rs  to_take.rs  ua.rs
pksip/src/dialog/: ua.rs
pksip/src/endpoint/: builder.rs  mod.rs  resolver.rs  service.rs
pksip/src/header/: accept.rs  accept_encoding.rs  accept_language.rs  alert_info.rs  allow.rs  authentication_info.rs  authorization.rs  call_id.rs  call_info.rs  contact.rs  content_disposition.rs  content_encoding.rs  content_language.rs  content_length.rs  content_type.rs  cseq.rs  date.rs  error_info.rs  expires.rs  from.rs  header.rs  in_reply_to.rs  max_fowards.rs  mime_version.rs  min_expires.rs  organization.rs  priority.rs  proxy_authenticate.rs  proxy_authorization.rs  proxy_require.rs  record_route.rs  reply_to.rs  require.rs  retry_after.rs  route.rs  server.rs  subject.rs  supported.rs  timestamp.rs  to.rs  (+5 more)
pksip/src/headers/: accept.rs  accept_encoding.rs  accept_language.rs  alert_info.rs  allow.rs  authentication_info.rs  authorization.rs  call_id.rs  call_info.rs  contact.rs  content_disposition.rs  content_encoding.rs  content_language.rs  content_length.rs  content_type.rs  cseq.rs  date.rs  error_info.rs  expires.rs  from.rs  header.rs  in_reply_to.rs  max_fowards.rs  mime_version.rs  min_expires.rs  mod.rs  organization.rs  priority.rs  proxy_authenticate.rs  proxy_authorization.rs  proxy_require.rs  record_route.rs  reply_to.rs  require.rs  retry_after.rs  route.rs  server.rs  subject.rs  supported.rs  timestamp.rs  (+6 more)
pksip/src/message/: auth.rs  buffer.rs  code.rs  method.rs  mod.rs  param.rs  params.rs  protocol.rs  sip_uri.rs  status_code.rs  transport.rs  uri.rs
pksip/src/message/headers/: accept.rs  accept_encoding.rs  accept_language.rs  alert_info.rs  allow.rs  authentication_info.rs  authorization.rs  call_id.rs  call_info.rs  contact.rs  content_disposition.rs  content_encoding.rs  content_language.rs  content_length.rs  content_type.rs  cseq.rs  date.rs  error_info.rs  expires.rs  from.rs  in_reply_to.rs  max_fowards.rs  mime_version.rs  min_expires.rs  mod.rs  organization.rs  priority.rs  proxy_authenticate.rs  proxy_authorization.rs  proxy_require.rs  record_route.rs  reply_to.rs  require.rs  retry_after.rs  route.rs  server.rs  subject.rs  supported.rs  timestamp.rs  to.rs  (+5 more)
pksip/src/parser/: mod.rs  parse_msg_tests.rs  parse_uri_tests.rs
pksip/src/parser/tests/: uri.rs
pksip/src/test_utils/: mod.rs  parser.rs  transaction.rs  transport.rs
pksip/src/transaction/: client.rs  client_inv.rs  client_invite.rs  inv_client.rs  inv_server.rs  key.rs  manager.rs  mod.rs  server.rs  server_inv.rs  server_invite.rs  sip_transaction.rs
pksip/src/transaction/client/: invite.rs  mod.rs  non_invite.rs
pksip/src/transaction/server/: invite.rs  mod.rs  non_invite.rs
pksip/src/transaction/tests/: client.rs  mod.rs  server.rs
pksip/src/transport/: decode.rs  decoder.rs  incoming.rs  mod.rs  outgoing.rs  tcp.rs  udp.rs  websocket.rs  ws.rs
pksip/src/transport/tcp/: mod.rs
pksip/src/transport/ws/: mod.rs
pksip/src/ua/: dialog.rs  invite.rs  mod.rs
pksip/src/ua/dialogs/: dialog.rs  mod.rs
sip/transport-layer/: Cargo.toml
sip/transport-layer/src/: transport.rs
sip/transport-layer/src/transport/: manager.rs  udp.rs
sip/tu-layer/: Cargo.toml
sip/tu-layer/src/: lib.rs  resolver.rs  server.rs  service.rs
(+258 files in other folders)
