[workspace]
members = [ "pksip","pksip-util", "examples"]
resolver = "1"

[workspace.dependencies]
sip = {path = "pksip"}
pksip-util = { path = "pksip-util" }

[workspace.package]
edition = "2021"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"


[profile.release-with-debug]
inherits = "release"
opt-level = 2
debug = true
strip = "none"