[workspace]
members = [ "pksip","util", "examples"]
resolver = "1"

[workspace.dependencies]
sip = {path = "pksip"}
util = { path = "util" }
tokio = { version = "1.41.1", features = [
    "net",
    "rt-multi-thread",
    "sync",
    "macros",
    "time",
    "test-util",
] }

[workspace.package]
edition = "2021"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"


[profile.release-with-debug]
inherits = "release"
opt-level = 2
debug = true
strip = "none"
