[package]
name = "examples"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.41"
tracing-subscriber = {version = "0.3", features = ["chrono", "env-filter"]}
async-trait = "0.1.83"

sip = {path = "../crates/sip"}

[[example]]
name = "parse"
path = "parse.rs"