[package]
name = "examples"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["rt", "macros", "tracing"] }
tracing = "0.1.41"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}
async-trait = "0.1.83"
sip = {path = "../crates/sip"}

[dependencies.console-subscriber]
version = "0.2"
features = ["env-filter"]

[[example]]
name = "parse"
path = "parse.rs"

[[example]]
name = "uas_options"
path = "uas_options.rs"