[package]
name = "examples"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["rt", "macros", "tracing", "signal"] }
tracing = "0.1.41"
tracing-subscriber = {version = "0.3", features = ["env-filter", "chrono"]}
async-trait = "0.1.83"
pksip = {path = "../pksip"}
chrono = "0.4"

[dependencies.console-subscriber]
version = "0.4.1"
features = ["env-filter"]

[[example]]
name = "stateless_uas"
path = "stateless_uas.rs"

[[example]]
name = "uas_options"
path = "uas_options.rs"

[[example]]
name = "simple_dialog"
path = "simple_dialog.rs"
