[package]
name = "pksip"
version = "0.1.0"
edition = "2021"

[dependencies]
util.workspace = true
itertools = "0.13.0"
async-trait = "0.1.83"
tokio = { version = "1.41.1", features = [
    "net",
    "rt-multi-thread",
    "sync",
    "macros",
    "time",
    "test-util",
] }
enum-as-inner = "0.6.1"
log = "0.4.26"
tracing = "0.1.41"
local-ip-address = "0.6.3"
tokio-util = {version = "0.7.15", features = ["codec"]}
tokio-stream = "0.1.17"
tokio-tungstenite = "0.26.2"
futures-util = "0.3.31"
thiserror = "2.0.12"
hyper = { version = "1.0", default-features = false, features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
bytes = "1"

[dev-dependencies]
assert_matches = "1.5"
criterion = "0.5"

[[bench]]
name = "parse"
harness = false