[package]
name = "sip-transport"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sip-message.workspace = true
async-trait = "0.1.83"
arrayvec = "0.7.6"
tokio = { version = "1.41.1", features = ["full"] }