[package]
name = "sip"
version = "0.1.0"
edition = "2021"

[dependencies]
reader = { path = "../reader" }
async-trait = "0.1.83"
tokio = { version = "1.41.1", features = ["full"] }
hickory-resolver = "0.24.1"
itertools = "0.13.0"


[dev-dependencies]
assert_matches = "1.5"
criterion = "0.5"

[[bench]]
name = "bench"
harness = false
