[package]
name = "sip"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reader.workspace = true
itertools = "0.13.0"
async-trait = "0.1.83"
hickory-resolver = "0.24.1"
tokio = { version = "1.41.1", features = [
    "net",
    "rt-multi-thread",
    "sync",
    "macros",
    "time",
    "test-util",
] }
enum-as-inner = "0.6.1"
log = "0.4.26"
tracing = "0.1.41"
local-ip-address = "0.6.3"

[dev-dependencies]
assert_matches = "1.5"
criterion = "0.5"
