[package]
name = "tu-layer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
encoding-layer.workspace = true
transaction-layer.workspace = true
transport-layer.workspace = true
hickory-resolver = "0.24.1"
async-trait = "0.1.83"
tokio = { version = "1.41.1" }